--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     cuisine sénégalaise avec nos chefs experts.</p>
             </div>
             <div class="droite">
+                <p><i class="fa-solid fa-search"></i>Cours disponibles</p>
                 <img src="images/thieboudieunerouge.JPG" alt="Thiéboudiène">
             </div>
         </section>
