optimisation 1 de la version 2

--- a/pages/inscription-traiteur.html
+++ b/pages/inscription-traiteur.html
@@ -49,7 +49,7 @@
                 <h1>Devenir traiteur partenaire</h1>
                 <p>Remplissez le formulaire pour rejoindre notre réseau de traiteurs professionnels.</p>
 
-                <form>
+                <form >
                     <!-- Informations de base -->
                     <div class="form-section">
                         <h2>Informations de base</h2>
@@ -78,7 +78,7 @@
                         <h2>Informations professionnelles</h2>
                         <div class="form-group full-width">
                             <label>Catégorie</label>
-                            <select required>
+                            <select >
                                 <option>Sélectionnez une catégorie</option>
                                 <option>Traiteur événementiel</option>
                                 <option>Traiteur mariage</option>
@@ -164,6 +164,7 @@
                             </div>
 
                         </div>
+                    </div>
 
                         <div class="form-actions">
                             <button type="submit" class="submit-btn">S'inscrire</button>
