--- a/pages/traiteurs.html
+++ b/pages/traiteurs.html
@@ -115,8 +115,9 @@
         <section class="section3-traiteur">
             <h3> Vous êtes traiteur ?</h3>
             <p>Rejoignez notre réseau et développez votre activité événementielle !</p>
-            <button><a href="inscription-traiteur.html">Devenir traiteur</a></button>
+            <a href="inscription-traiteur.html">Devenir traiteur</a>
         </section>
+        
     </main>
 
     <footer>
